--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ requests
 yfinance
 ccxt
 firebase-admin
-google-generativeai
+google-generativeai>=0.8.0
+openai
+anthropic
 ta
 feedparser
 fredapi
